SERVER-44270 Compilation fails with --libc++ and clang 8.0+

(cherry picked from commit aac59681b3ae4d3806174227ba4c88aaf8e89ea2)